1.加入最近3箱限制语音提示 2.背景颜色
Signed-off-by: abel.tang <972980756@qq.com>